New_Proposal_Generator
